--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.2.0",
+    "country-select-js": "^2.0.1",
     "css-loader": "^4.3.0",
     "cssnano": "^4.1.10",
     "mini-css-extract-plugin": "^0.11.3",
